--- a/kasa/src/styles/Thumb.css
+++ b/kasa/src/styles/Thumb.css
@@ -1,11 +1,16 @@
 .thumb {
+    position: relative;
     width: 340px;
     height: 340px;
     border-radius: 10px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     overflow: hidden;
-    margin: 0;
+}
+.thumbTransparentEffect {
+    position: absolute;
     z-index: 10;
+    height: 340px;
+    width: 340px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 
 .thumbImage {
@@ -13,4 +18,14 @@
     width: 340px;
     object-fit: cover;
     z-index: -10;
+}
+
+.thumbTitle {
+    position: absolute;
+    left: 5%;
+    bottom: 0;
+    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
+    z-index: 10;
 }
