--- a/kasa/src/styles/Dropdown.css
+++ b/kasa/src/styles/Dropdown.css
@@ -1,12 +1,14 @@
 .dropdown {
-    width: 600px;
+    width: 80vw;
+    max-width: 600px;
 }
+
 .dropdownButton{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    width: inherit;
+    width: 100%;
     height: 50px;
     border-radius: 10px;
     background-color: #FF6060;
@@ -15,8 +17,9 @@
     border: none;
 }
 
+
+
 .dropdownMenu{
-    width: inherit;
     padding: 20px 0 ;
     list-style: none;
     background-color: #f6f6f6;
@@ -35,4 +38,13 @@
 
 .rotated{
     transform: rotate(180deg);
+}
+
+.large {
+    font-size: 24px;
+    max-width: 1000px;
+}
+
+.text {
+    padding: 20px;
 }
