--- a/kasa/src/styles/Thumb.css
+++ b/kasa/src/styles/Thumb.css
@@ -1,7 +1,7 @@
 .thumb {
     position: relative;
     width: 340px;
-    height: 340px;
+    height: 255px;
     border-radius: 10px;
     overflow: hidden;
 }
@@ -23,8 +23,14 @@
 .thumbTitle {
     position: absolute;
     left: 5%;
-    bottom: 5%;
+    bottom: 8%;
     font-size: 18px;
     color: #ffffff;
     z-index: 10;
+}
+
+@media screen and (min-width: 570px) {
+    .thumb {
+        height: 340px;
+    }
 }
