--- a/kasa/src/styles/components/Banner.css
+++ b/kasa/src/styles/components/Banner.css
@@ -3,15 +3,15 @@
     display: flex;
     justify-content: center;
     max-width: 1240px;
-    width: 80vw;
+    width: 100%;
     height: 110px;
-    border-radius: 25px;
+    border-radius: 10px;
     overflow: hidden;
 }
 
 .bannerImage {
     max-width: 1240px;
-    width: 80vw;
+    width: 100%;
     height: 220px;
     object-fit: cover;
 }
@@ -28,8 +28,8 @@
 .darker {
     position: absolute;
     max-width: 1240px;
-    width: 80vw;
-    height: 220px;
+    width: 100%;
+    height: 100%;
     background-color: black;
     opacity: 0.3;
 }
@@ -37,6 +37,7 @@
 @media screen and (min-width: 570px) {
     .banner {
         height: 220px;
+        border-radius: 25px;
     }
     .bannerText {
         font-size: 48px;
