--- a/kasa/src/styles/components/Thumb.css
+++ b/kasa/src/styles/components/Thumb.css
@@ -1,8 +1,9 @@
 .thumb {
     position: relative;
-    width: 340px;
+    width: 100%;
     height: 255px;
     border-radius: 10px;
+    margin-top: 20px;
     overflow: hidden;
 }
 .thumbTransparentEffect {
@@ -29,8 +30,9 @@
     z-index: 10;
 }
 
-@media screen and (min-width: 570px) {
+@media screen and (min-width: 420px) {
     .thumb {
         height: 340px;
+        width: 340px;
     }
 }
