--- a/kasa/src/styles/components/Banner.css
+++ b/kasa/src/styles/components/Banner.css
@@ -2,7 +2,6 @@
     position: relative;
     display: flex;
     justify-content: center;
-    max-width: 1240px;
     width: 100%;
     height: 110px;
     border-radius: 10px;
@@ -10,7 +9,7 @@
 }
 
 .bannerImage {
-    max-width: 1240px;
+    max-width: 100%;
     width: 100%;
     height: 220px;
     object-fit: cover;
@@ -27,7 +26,7 @@
 
 .darker {
     position: absolute;
-    max-width: 1240px;
+    max-width: 100%;
     width: 100%;
     height: 100%;
     background-color: black;
