--- a/kasa/src/styles/components/Header.css
+++ b/kasa/src/styles/components/Header.css
@@ -3,3 +3,11 @@
     justify-content: space-between;
     margin: 20px;
 }
+
+@media screen and (min-width: 720px) {
+    .header {
+        display: flex;
+        justify-content: space-between;
+        margin: 40px 100px;
+    }
+}
