--- a/kasa/src/styles/components/Main.css
+++ b/kasa/src/styles/components/Main.css
@@ -3,3 +3,21 @@
     flex-direction: column;
     padding: 20px;
 }
+.thumbContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0;
+}
+
+@media screen and (min-width: 720px) {
+    .main {
+        padding: 20px 100px;
+    }
+    .thumbContainer {
+        margin-top: 40px;
+        padding: 25px 25px;
+        background-color: #f7f7f7;
+        border-radius: 25px;
+    }
+}
