--- a/kasa/src/styles/App.css
+++ b/kasa/src/styles/App.css
@@ -3,3 +3,9 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
+
+.App {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
