--- a/kasa/src/styles/components/Dropdown.css
+++ b/kasa/src/styles/components/Dropdown.css
@@ -1,30 +1,33 @@
 .dropdown {
-    width: 80vw;
-    max-width: 600px;
+    width: 100%;
 }
 
 .dropdownButton{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
     width: 100%;
-    height: 50px;
-    border-radius: 10px;
+    height: 30px;
+    margin-bottom: 20px;
+    padding: 0 20px;
+    border-radius: 5px;
     background-color: #FF6060;
     color: white;
-    font-size: 18px;
+    font-size: 13px;
     border: none;
 }
 
-
+.arrow {
+    width: 20px;
+}
 
 .dropdownMenu{
-    padding: 20px 0 ;
+    margin: -20px 0 20px 0;
+    padding: 20px 10px ;
     list-style: none;
     background-color: #f6f6f6;
     color: #FF6060;
-    font-size: 18px;
+    font-size: 12px;
     border-radius: 0 0 10px 10px;
 }
 
@@ -47,4 +50,22 @@
 
 .text {
     padding: 20px;
+}
+
+@media screen and (min-width: 750px) {
+    .dropdown {
+        width: 46%;
+    }
+    .dropdownButton{
+        height: 50px;
+        border-radius: 10px;
+        font-size: 18px;
+        margin: 20px 0;
+    }
+    .dropdownMenu{
+        font-size: 18px;
+    }
+    .arrow {
+        width: unset;
+    }
 }
