--- a/kasa/src/styles/components/Tag.css
+++ b/kasa/src/styles/components/Tag.css
@@ -1,8 +1,19 @@
 .tag{
+    flex-shrink: 0;
     width: fit-content;
+    height: fit-content;
+    margin: 5px 10px 5px 0;
     padding: 3px 22px;
+    font-size: 10px;
+    border-radius: 5px;
     background-color: #ff6060;
-    border-radius: 10px;
     color: white;
-    font-size: 14px;
+}
+
+@media screen and (min-width: 750px) {
+    .tag{
+        font-size: 14px;
+        border-radius: 10px;
+        padding: 6px 40px;
+    }
 }
