--- a/kasa/src/styles/components/InformationPanel.css
+++ b/kasa/src/styles/components/InformationPanel.css
@@ -60,7 +60,7 @@
         flex-wrap: wrap;
         justify-content: flex-end;
         width: 200px;
-        min-width: 200pxgit%;
+        min-width: 200px;
         margin: 30px 0;
     }
     .stars {
