--- a/kasa/src/styles/components/Banner.css
+++ b/kasa/src/styles/components/Banner.css
@@ -8,6 +8,11 @@
     overflow: hidden;
 }
 
+.bannerLarge {
+    height: 220px;
+    border-radius: 10px;
+}
+
 .bannerImage {
     max-width: 100%;
     width: 100%;
@@ -19,7 +24,6 @@
     position: absolute;
     align-self: center;
     margin: 0 10px;
-    /* font-size: 48px; */
     font-size: 24px;
     color: white;
 }
@@ -38,6 +42,11 @@
         height: 220px;
         border-radius: 25px;
     }
+
+    .bannerLarge {
+        border-radius: 10px;
+    }
+
     .bannerText {
         font-size: 48px;
     }
