--- a/kasa/src/styles/components/Dropdown.css
+++ b/kasa/src/styles/components/Dropdown.css
@@ -8,7 +8,7 @@
     align-items: center;
     width: 100%;
     height: 30px;
-    margin-bottom: 20px;
+    margin: 20px 0;
     padding: 0 20px;
     border-radius: 5px;
     background-color: #FF6060;
@@ -55,6 +55,9 @@
 @media screen and (min-width: 750px) {
     .dropdown {
         width: 46%;
+    }
+    .dropdownLarge {
+        margin-top: 30px;
     }
     .dropdownButton{
         height: 50px;
